syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.augusto";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy.augusto;

service KeymanagerCadastraGrpcService {
  rpc cadastra (NewPixRequest) returns (NewPixResponse) {}
}

service KeymanagerDeletaGrpcService {
  rpc deleta (DeletePixRequest) returns (DeletePixResponse) {}
}

message DeletePixRequest {
  int64 idPix = 1;
  string idCliente = 2;
}

message DeletePixResponse {
  int64 idPix = 1;
  string idCliente = 2;
}

enum TipoChave {
  TIPO_CHAVE_UNSPECIFIED = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum TipoConta {
  TIPO_CONTA_UNSPECIFIED = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message NewPixRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}
message NewPixResponse {
  int64 idPix = 1;
}
